automation-service/k8s/global/virtual-services/portal-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: portal-vs
spec:
  hosts:
    - ww.foc-dap-world-wire-2a0beb393d3242574412e5315d3d4662-0006.jp-tok.containers.appdomain.cloud
  gateways:
    - worldwire-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 4200
            host: ww-portal.default.svc.cluster.local
      rewrite:
        uri: /
---
